force-app/main/default/objects/Booking__c/fields/Booking_Balace__c.field-meta.xml
<CustomField>
    <fullName>Booking_Balace__c</fullName>
    <formula>Final_Booking_Price__c -  Total_Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Balace</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>