force-app/main/default/objects/Booking__c/validationRules/Booking_Completion_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Completion_Check</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;Completed&apos;) &amp;&amp;  NOT(ISPICKVAL( Payment_Status__c , &apos;Paid&apos;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Booking status cannot be completed if the payment status is not paid.</errorMessage>
</ValidationRule>