force-app/main/default/objects/Booking__c/validationRules/Check_Booking_and_Payment_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Booking_and_Payment_Status</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;Confirmed&apos;) &amp;&amp;  ISPICKVAL( Payment_Status__c , &apos;Pending&apos;)</errorConditionFormula>
    <errorMessage>Invalid Payment Status for current Booking Status</errorMessage>
</ValidationRule>