force-app/main/default/objects/Booking__c/validationRules/Check_Cancellation_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Cancellation_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;Cancelled&apos;) &amp;&amp;  Start_Date_Time__c &lt;  NOW()</errorConditionFormula>
    <errorMessage>Booking cannot be cancelled after the start date</errorMessage>
</ValidationRule>