force-app/main/default/objects/Booking__c/validationRules/Check_Future_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Future_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED(Start_Date_Time__c) || ISNEW())&amp;&amp; Start_Date_Time__c &lt;  NOW()</errorConditionFormula>
    <errorDisplayField>Start_Date_Time__c</errorDisplayField>
    <errorMessage>Start date cannot be in the past.</errorMessage>
</ValidationRule>