force-app/main/default/objects/Booking__c/validationRules/Check_Mandatory_Cancellation_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Mandatory_Cancellation_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;Cancelled&apos;) &amp;&amp;  ISBLANK( Cancellation_Reason__c )</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Cancellation Reason is required when the booking is cancelled</errorMessage>
</ValidationRule>