force-app/main/default/objects/Booking__c/validationRules/Prevent_CouponCode_Change_If_Not_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_CouponCode_Change_If_Not_Pending</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Coupon_Code__c ) &amp;&amp;  NOT(ISPICKVAL( Status__c , &quot;Pending&quot;))</errorConditionFormula>
    <errorDisplayField>Coupon_Code__c</errorDisplayField>
    <errorMessage>You cannot change the Coupon Code once the status is no longer pending</errorMessage>
</ValidationRule>