force-app/main/default/objects/Booking__c/validationRules/Validation_for_Booking_Cancelation.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Booking_Cancelation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Status__c ) &amp;&amp;  ISPICKVAL( Status__c , &apos;Cancelled&apos;) &amp;&amp;  DATEVALUE( Start_Date_Time__c ) &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date_Time__c</errorDisplayField>
    <errorMessage>Booking cannot be cancelled as the start date has passed</errorMessage>
</ValidationRule>